Corrigido o nome da branch

--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -1,9 +1,9 @@
-name: gh-pages
+name: publishGitPages
 
 on:
   push:
     branches:
-      - master
+      - main
 
 permissions: 
   contents: write
