--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -22,8 +22,8 @@ jobs:
     - name: Publish with dotnet
       run: dotnet publish Imc/Imc.csproj --configuration Release --output build
     # changes the base-tag in index.html from '/' to 'BlazorAppSpendsRegister' to match GitHub Pages repository subdirectory
-    # - name: Change base-tag in index.html from / to BlazorAppSpendsRegister
-    #   run: sed -i 's/<base href="\/" \/>/<base href="\/BlazorAppSpendsRegister\/" \/>/g' build/wwwroot/index.html
+    - name: Change base-tag in index.html from / to BlazorAppSpendsRegister
+      run: sed -i 's/<base href="\/" \/>/<base href="\/Imc\/" \/>/g' build/wwwroot/index.html
     - name: Commit wwwroot to GitHub Pages
       uses: JamesIves/github-pages-deploy-action@v4.5.0
       with:
