--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -23,7 +23,7 @@ jobs:
       run: dotnet publish Imc/Imc.csproj --configuration Release --output build
     # changes the base-tag in index.html from '/' to 'BlazorAppSpendsRegister' to match GitHub Pages repository subdirectory
     - name: Change base-tag in index.html from / to BlazorAppSpendsRegister
-      run: sed -i 's/<base href="\/" \/>/<base href="\/Imc\/" \/>/g' build/wwwroot/index.html
+      run: sed -i 's/<base href="\/" \/>/<base href="\/carnacode-balta-2024-desafio-03\/" \/>/g' build/wwwroot/index.html
     - name: Commit wwwroot to GitHub Pages
       uses: JamesIves/github-pages-deploy-action@v4.5.0
       with:
