--- a/.github/workflows/ftp.yaml
+++ b/.github/workflows/ftp.yaml
@@ -33,7 +33,7 @@ jobs:
       - name: Publish Imc FTP 📂
         uses: maverage/FTP-Deploy-Action@v4.3.5
         with:
-          server: 'ftp.pdsinformatica.com.br'
+          server: ${{ secrets.FTP_SERVER }}
           port: '2121'
           local-dir: './output/'
           server-dir: 'imc.pdsinformatica.com.br/wwwroot/'
